# freebsd-1.x-ports

./: CHECKLIST  CHECKOFF.ROD  GUIDELINES  MIRROR.SITES  Makefile  README
db/ingres/: CHANGES  Makefile  TODO  configure  configure.in
db/ingres/demo/: dept  employee  item  parts  qry  sale  setup  store  supplier  supply
db/ingres/doc/: 0aa.nr  1aa.nr  Makefile  contents.sh  toc.nr
db/ingres/files/: dayfile8  dbtmplt7  dbtmplt8  equel7  equel8  error8_2  error8_3  error8_4  error8_5  proctab7  proctab8  procx8  startup  sysmod8  users
db/ingres/info/: CONVERT  README.FreeBSD  READ_ME  VERSION  howto_concurrency  howto_setup  ingres_tutorial  version
db/ingres/src/: ci-all  co-all
devel/dejagnu/: ChangeLog  Makefile  Makefile.in  TODO  config.status  configure.in  runtest  runtest.exp  site.tmpl  tcl-mode.el
devel/dejagnu/config/: mh-linux  mh-sysv4
devel/dejagnu/contrib/: test-g++  test-target  test-tool
devel/dejagnu/doc/: Makefile.in  configure.in  dejagnu.texi  expect.texi  runtest.1  tcl.texi
devel/dejagnu/example/: Makefile  Makefile.in  config.status  configure.in
devel/dejagnu/lib/: bug.exp  debugger.exp  framework.exp  remote.exp  udi.exp  util-defs.exp  utils.exp  vrtx.exp  vxworks.exp
devel/dejagnu/testsuite/: Makefile  Makefile.in  configure.in
lang/itcl/: CHANGES  Intro.ps  Makefile.in  README  configure  configure.in
lang/itcl/demos/: README  coloredit  listboxes
lang/itcl/man/: Makefile.in  incrTcl.n
lang/itcl/src/: Makefile.in  itcl_class.c  itcl_class.h  itcl_core.c  itcl_core.h  itcl_methods.c  itcl_methods.h  itcl_objects.c  itcl_objects.h  itcl_util.c  itcl_util.h  itcl_vars.c  itcl_vars.h  tclAppInit.c  tkAppInit.c
lang/itcl/tests/: AAA.test  Bar.tcl  BarFoo.tcl  Baz.tcl  Foo.tcl  FooBar.tcl  Geek.tcl  Mongrel.tcl  VirtualErr.tcl  all  basic.test  inherit.test  testlib.tcl  toaster.test  uplevel.test  upvar.test
lang/tcl/: ChangeLog  Makefile  Makefile.in  README  VERSION  changes  config.status  configure  configure.in  panic.c  porting.notes  tcl.h  tclAppInit.c  tclAssem.c  tclAsync.c  tclBasic.c  tclCmdAH.c  tclCmdIL.c  tclCmdMZ.c  tclEnv.c  tclExpr.c  tclGet.c  tclGlob.c  tclHash.c  tclHash.h  tclHistory.c  tclInt.h  tclLink.c  tclMain.c  tclMtherr.c  tclParse.c  tclProc.c  tclTest.c  tclUnix.h  tclUnixAZ.c  tclUnixStr.c  tclUnixUtil.c  tclUtil.c  tclVar.c
lang/tcl/compat/: dirent.h  dirent2.h  float.h  getcwd.c  limits.h  stdlib.h  strcasecmp.c  strerror.c  string.h  strstr.c  strtod.c  strtol.c  strtoul.c  testpid.c  teststrtoul.c  testuid.c  testwait.c  unistd.h  waitpid.c
lang/tcl/doc/: AddErrInfo.3  AppInit.3  AssembCmd.3  Async.3  Backslash.3  CallDel.3  CmdCmplt.3  Concat.3  CrtCommand.3  CrtInterp.3  CrtMathFnc.3  CrtPipelin.3  CrtTrace.3  DString.3  DetachPids.3  EnterFile.3  Eval.3  ExprLong.3  Fork.3  GetInt.3  Hash.3  History.3  Interp.3  LinkVar.3  PrintDbl.3  RecordEval.3  RegExp.3  SetRecLmt.3  SetResult.3  SetVar.3  SplitList.3  StrMatch.3  Tcl.n  TildeSubst.3  TraceVar.3  append.n  array.n  break.n  case.n  catch.n  (+61 more)
lang/tcl/pkg/: +DESC  +DESC_S  +ONELINE_B  +ONELINE_S  +PLIST_B  +PLIST_S
lang/tcl/tests/: all  append.test  async.test  case.test  cd.test  cmdinfo.test  concat.test  dcall.test  dstring.test  env.test  error.test  eval.test  exec.test  expr.test  file.test  for.test  format.test  glob.test  history.test  if.test  incr.test  info.test  join.test  lindex.test  link.test  linsert.test  list.test  llength.test  lrange.test  lreplace.test  lsearch.test  lsort.test  misc.test  open.test  parse.test  pid.test  proc.test  regexp.test  rename.test  scan.test  (+10 more)
lang/tcl/testsuite/: ChangeLog
net/fspclient/: ChangeLog  FOR.MORE.INFO  Makefile  Makefile.in  README  README.FreeBSD  README.INSTALL  VERSION  What.Is.FSP  config.h  config.h.in  config.status  configure  configure.in  fsprc  package.client
net/fspclient/bsd/: Makefile  Makefile.in  cmp.c  getopt.c  ls.c  ls.h  print.c  util.c
net/fspclient/client/: Makefile  Makefile.in  client.h  fsp.man  glob.c  lib.c  lock.c  lock.h  macro.c  macro.h  main.c  main.h  parse.c  parse.h  patchlevel.h  redirect.c  redirect.h  update.version  util.c
net/fspclient/common/: Makefile  Makefile.in  common.h  makedepend  misc.c  udp_io.c
net/fspclient/pkg/: +DESC  +ONELINE
print/texk/web2c-6.1/: ChangeLog  Makefile.in  README  configure  configure.in  texinfo.tex
util/expect/: CHANGES.4to5  ChangeLog  Dbg.c  Dbg.h  FAQ  HISTORY  INSTALL  Makefile  Makefile.in  README  config.status  configure  configure.in  exp_clib.c  exp_command.c  exp_command.h  exp_console.c  exp_event.h  exp_glob.c  exp_int.h  exp_inter.c  exp_log.c  exp_log.h  exp_main_exp.c  exp_main_sub.c  exp_main_tk.c  exp_poll.c  exp_printify.c  exp_pty.c  exp_regexp.c  exp_select.c  exp_simple.c  exp_strf.c  exp_tk.c  exp_trap.c  exp_tty.c  exp_tty.h  exp_tty_in.h  exp_win.c  expect.c  (+18 more)
util/expect/example/: Makefile  archie  chesslib2.c  dislocate  dislocate.man  dvorak  kibitz  kibitz.man  passmass  passmass.man  rftp  rlogin-cwd  robohunt  timed-read  tknewsbiff  tknewsbiff.man  tkpasswd  xkibitz  xkibitz.man  xpstat
util/expect/tests/: all  cat.test  defs  expect.test  pid.test  spawn.test  stty.test
util/expect/testsuite/: Makefile.in  configure.in
x11/blt/: ChangeLog  MANIFEST  Makefile  Makefile.in  README  TODO  config.status  configure  configure.in  tkAppInit.c
x11/blt/demos/: barchart  barchart2  barchart3  bgexec  bitmap  busy  calendar  debug  features.tcl  graph  graph2  graph3  graph4  grconf.tcl  htext  palette
x11/blt/man/: Makefile  Makefile.in  barchart.man  bell.man  bgexec.man  bitmap.man  busy.man  cutbuffer.man  debug.man  dragdrop.man  graph.man  htext.man  intro.man  table.man  watch.man  win.man
x11/blt/pkg/: +DESC  +ONELINE  +PLIST  +REQ
x11/blt/src/: Makefile  Makefile.in  blt.h  bltBell.c  bltBgexec.c  bltBitmap.c  bltBusy.c  bltConfig.h  bltConfig.h.in  bltCutbuffer.c  bltDebug.c  bltDragDrop.c  bltGrAxis.c  bltGrBar.c  bltGrElem.c  bltGrElem.h  bltGrHairs.c  bltGrLegd.c  bltGrLine.c  bltGrMisc.c  bltGrPS.c  bltGrPS.h  bltGrTag.c  bltGrTag.h  (+10 more)
(+15562 files in other folders)
