dnl process this file with autoconf to produce a configure script
dnl
dnl this script written by Alistair G. Crooks (agc@uts.amdahl.com)
dnl

AC_INIT(src/h/ingres.h)
AC_PROG_CC
AC_PROG_RANLIB

AC_HAVE_HEADERS(string.h)
AC_HAVE_HEADERS(stdlib.h)
AC_HAVE_HEADERS(unistd.h)
AC_HAVE_HEADERS(stdarg.h)
AC_HAVE_HEADERS(sgtty.h)
AC_HAVE_HEADERS(fcntl.h)
AC_HAVE_HEADERS(machine/endian.h)
AC_HAVE_HEADERS(sys/wait.h)
AC_HAVE_HEADERS(sys/time.h)
AC_HAVE_HEADERS(sys/file.h)
AC_HAVE_HEADERS(sys/resource.h)

AC_TIME_WITH_SYS_TIME
AC_RETSIGTYPE
AC_DIR_HEADER
AC_OFF_T

AC_HEADER_EGREP(sys_nerr, stdio.h, AC_DEFINE(DECLARED_SYS_NERR))
AC_HEADER_EGREP(sys_errlist, stdio.h, AC_DEFINE(DECLARED_SYS_ERRLIST))

AC_HAVE_FUNCS(strerror)
AC_HAVE_FUNCS(strcspn)

AC_OUTPUT(
src/conf/Makefile
src/ctlmod/Makefile
src/dbu/Makefile
src/equel/Makefile
src/h/Makefile
src/libq/Makefile
src/monitor/Makefile
src/ovqp/Makefile
src/parser/Makefile
src/qrymod/Makefile
src/sql/Makefile
src/support/Makefile
src/util/Makefile
, make depend
)
