# This file is a shell script fragment that supplies the information
# necessary to tailor a template configure script into the configure
# script appropriate for this directory.  For more information, check
# any existing configure script.

srctrigger="runtest.exp"
srcname="DejaGnu"

configdirs="doc example testsuite"

# per-host:

case "${host}" in
  *-*-sysv4*)		host_makefile_frag=config/mh-sysv4 ;;
  *-linux)		host_makefile_frag=config/mh-linux ;;
esac

# per-target:


# post-target:

